--- a/app/views/layouts/_side_menu.html.erb
+++ b/app/views/layouts/_side_menu.html.erb
@@ -11,7 +11,9 @@
                             <%= current_user ? current_user.name.titleize : current_user.email  %>
                         </strong>
                     </span>
-                    <span class="text-muted text-xs block"><%= t(current_user.role.name) %><b class="caret"></b></span>
+                    <% if current_user.role %>
+                        <span class="text-muted text-xs block"><%= t(current_user.role.name) %><b class="caret"></b></span>
+                    <% end %>
                 </span>
             </a>
             <ul class="dropdown-menu animated fadeInRight m-t-xs">
