Add some styles.

--- a/app/views/layouts/_side_menu.html.erb
+++ b/app/views/layouts/_side_menu.html.erb
@@ -21,9 +21,7 @@
                 <li><%= link_to "Sair", destroy_user_session_path, :method => :delete %></li>
             </ul>
         </div>
-        <div class="logo-element">
-            DOLLY
-        </div>
+        <div class="logo-element">dolly</div>
     </li>
 
     <li>
