--- a/public/assets@admin/styles/src/_base.scss
+++ b/public/assets@admin/styles/src/_base.scss
@@ -1214,5 +1214,5 @@ body.modal-open { padding-right:inherit !important; }
 .jvectormap-zoomin, .jvectormap-zoomout {
   width: 15px;
   height: 15px;
-  background: #1ab394;
+  background: #DA6363;
 }
