--- a/public/assets@admin/styles/src/_elements.scss
+++ b/public/assets@admin/styles/src/_elements.scss
@@ -928,7 +928,7 @@ table.dataTable thead .sorting:after {
   display: block;
   overflow: hidden;
   cursor: pointer;
-  border: 2px solid #1ab394;
+  border: 2px solid #DA6363;
   border-radius: 3px;
 }
 
@@ -961,7 +961,7 @@ table.dataTable thead .sorting:after {
 .onoffswitch-inner:before {
   content: "ON";
   padding-left: 7px;
-  background-color: #1ab394;
+  background-color: #DA6363;
   color: white;
 }
 
@@ -978,7 +978,7 @@ table.dataTable thead .sorting:after {
   width: 18px;
   margin: 0px;
   background: white;
-  border: 2px solid #1ab394;
+  border: 2px solid #DA6363;
   border-radius: 3px;
   position: absolute;
   top: 0;
