--- a/public/assets@admin/styles/src/_chat.scss
+++ b/public/assets@admin/styles/src/_chat.scss
@@ -15,7 +15,7 @@
   height: 38px;
   width: 38px;
   display: block;
-  background: #1ab394;
+  background: #DA6363;
   padding: 9px 8px;
   text-align: center;
   color: #fff;
@@ -24,7 +24,7 @@
 
 .open-small-chat:hover {
   color: white;
-  background: #1ab394;
+  background: #DA6363;
 }
 
 
@@ -94,7 +94,7 @@
     }
 
     .chat-message.active {
-      background: #1ab394;
+      background: #DA6363;
       color: #fff;
     }
 
