--- a/public/assets@admin/styles/src/_variables.scss
+++ b/public/assets@admin/styles/src/_variables.scss
@@ -2,7 +2,7 @@
 $font-stack: "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 // Basic Colors
-$navy: #1ab394;           // Primary color
+$navy: #DA6363;           // Primary color
 $dark-gray: #c2c2c2;      // Default color
 $blue: #1c84c6;           // Success color
 $lazur: #23c6c8;          // Info color
