Add reactions view and controller.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
     <link href="/assets@admin/vendor/dataTables/dataTables.tableTools.min.css" rel="stylesheet">
     <link href="/assets@admin/vendor/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" rel="stylesheet">
     <link href="/assets@admin/vendor/dropzone/dropzone.css" rel="stylesheet">
+    <link href="/assets@admin/vendor/switchery/switchery.css" rel="stylesheet">
 
     <%= stylesheet_link_tag "application" %>
 
@@ -52,7 +53,7 @@
             <div id="page">
                 <%= yield %>
                 <div class="footer">
-                    <p class="pull-right">produzido por <strong>Hydra Team</strong>.</p>
+                    <p class="pull-right">by <strong>Hydra Team</strong>.</p>
                     <p class="pull-left"><strong>Copyright</strong> dolly - your own clone for social networks © 2016</p>
                 </div>
             </div>
@@ -79,6 +80,7 @@
     <script src="/assets@admin/vendor/dataTables/dataTables.tableTools.min.js"></script>
     <script src="/assets@admin/vendor/nestable/jquery.nestable.js"></script>
     <script src="/assets@admin/vendor/dropzone/dropzone.js"></script>
+    <script src="/assets@admin/vendor/switchery/switchery.js"></script>
     <script src="/assets@admin/bower_components/highcharts/highcharts.js"></script>
 
     <!-- scripts::main -->
