--- a/public/assets@admin/styles/src/_elements.scss
+++ b/public/assets@admin/styles/src/_elements.scss
@@ -141,23 +141,23 @@
 /* TOOLTIPS */
 
 .tooltip-inner {
-  background-color: #2f4050;
+  background-color: #004665;
 }
 
 .tooltip.top .tooltip-arrow {
-  border-top-color: #2f4050;
+  border-top-color: #004665;
 }
 
 .tooltip.right .tooltip-arrow {
-  border-right-color: #2f4050;
+  border-right-color: #004665;
 }
 
 .tooltip.bottom .tooltip-arrow {
-  border-bottom-color: #2f4050;
+  border-bottom-color: #004665;
 }
 
 .tooltip.left .tooltip-arrow {
-  border-left-color: #2f4050;
+  border-left-color: #004665;
 }
 
 /* EASY PIE CHART */
