--- a/public/assets@admin/styles/src/_variables.scss
+++ b/public/assets@admin/styles/src/_variables.scss
@@ -36,6 +36,6 @@ $boxed-backgound: image-url("patterns/shattered.png");
 $btn-border-radius: 3px;
 
 //Navigation
-$nav-bg: #2f4050;
+$nav-bg: #004665;
 $nav-profil-pattern: image-url("patterns/header-profile.png") no-repeat;
 $nav-text-color: #a7b1c2;
