--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav id="header" class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
+<nav id="header" class="navbar navbar-static-top white-bg" role="navigation" style="margin-bottom: 0">
     <div id="header" class="navbar-header">
         <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
         <!-- <form role="search" class="navbar-form-custom" method="post" action="search_results.html">
