--- a/app/views/layouts/_side_menu.html.erb
+++ b/app/views/layouts/_side_menu.html.erb
@@ -24,20 +24,8 @@
         <div class="logo-element">dolly</div>
     </li>
 
-    <li>
-        <a href="<%= root_path %>">
-            <i class="fa fa-th-large"></i>
-            <span class="nav-label">Dashboard</span>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <i class="fa fa-cog"></i>
-            <span class="nav-label">Messages</span><span class="fa arrow"></span>
-        </a>
-        <ul class="nav nav-second-level">
-            <li><%= link_to "All", messages_path %></li>
-            <li><%= link_to "New", new_message_path %></li>
-        </ul>
-    </li>
+    <li><a href="<%= root_path %>"><i class="fa fa-calendar"></i><span class="nav-label">Calendar</span></a></li>
+    <li><a href="<%= messages_path %>"><i class="fa fa-pencil-square"></i><span class="nav-label">Posts</span></a></li>
+    <li><a href="<%= reactions_path %>"><i class="fa fa-heart"></i><span class="nav-label">Reactions</span></a></li>
+    <li><a href="<%= messages_path %>"><i class="fa fa-comments"></i><span class="nav-label">Messages</span></a></li>
 </ul>
