--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,13 @@
 <div class="wrapper wrapper-content">
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-3">
+            <div class="ibox float-e-margins">
+                <div class="ibox-content mailbox-content">
+                    <%= render 'aside' %>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-9 animated fadeInRight">
             <div class="ibox float-e-margins">
                 <div class="ibox-content">
                     <div id="calendar"></div>
@@ -10,7 +17,6 @@
     </div>
 </div>
 
-
 <%= content_for :javascript do %>
     <script type="text/javascript">
         $(document).ready(function() {
@@ -18,9 +24,7 @@
             $('#calendar').fullCalendar({
                 events: [
                   <% @messages.each do |message|  %>
-                    {
-                      start  : "<%= message.when.nil?? DateTime.now : message.when  %>"
-                    },
+                    { start  : "<%= message.when.nil?? DateTime.now : message.when  %>" },
                   <% end %>
                 ],
             })
