--- a/public/assets@admin/styles/src/_base.scss
+++ b/public/assets@admin/styles/src/_base.scss
@@ -26,7 +26,7 @@ body.boxed-layout {
 }
 
 body.boxed-layout #wrapper {
-  background-color: #2f4050;
+  background-color: #004665;
   max-width: $boxed-width;
   margin: 0 auto;
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
