--- a/public/assets@admin/styles/src/_custom.scss
+++ b/public/assets@admin/styles/src/_custom.scss
@@ -1,3 +1,73 @@
+.login-with-facebook {
+    width: 100%;
+    display: block;
+    background: #4867aa;
+    position: relative;
+    padding: 20px 20px 20px 30px;
+    overflow: hidden;
+    border-radius: 5px;
+    transition: background-color .3s ease-in-out;
+    h1, i {
+        color: #e6e6e6;
+        display: inline-block;
+        transition: color .3s ease-in-out;
+    }
+    i {
+        font-size: 40px;
+        position: absolute;
+        padding: 0 30px;
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    h1 {
+        font-size: 30px;
+        line-height: 1;
+        padding: 0;
+        margin: 0;
+    }
+    &:hover {
+        background-color: #e6e6e6;
+        h1, i {
+            color: #4867aa;
+        }
+    }
+}
+
+div.hydra {
+    background-image: url(../images/hydra.png);
+    width: 300px;
+    height: 300px;
+    display: block;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin: 20px;
+    text-align: center;
+    p {
+        position: absolute;
+        bottom: 70px;
+        line-height: 1;
+        padding: 0;
+        margin: 0;
+        left: 0;
+        right: 0;
+        text-align: center;
+        color: #006296;
+        font-size: 17px;
+        font-family: "Open Sans";
+        letter-spacing: 2px;
+        font-weight: 100;
+    }
+}
+
+.chosen-container {
+    width: 100% !important;
+}
+
 .va-middle {
 	vertical-align: middle !important;
 }
