--- a/public/assets@admin/styles/src/_pages.scss
+++ b/public/assets@admin/styles/src/_pages.scss
@@ -71,6 +71,7 @@
 
 .loginscreen.middle-box {
   width: 300px;
+  padding-top: 200px;
 }
 
 .loginColumns {
@@ -88,9 +89,11 @@
 .logo-name {
   color: #e6e6e6;
   font-size: 100px;
-  font-weight: 800;
-  letter-spacing: -10px;
+  font-weight: 100;
   margin-bottom: 0px;
+  text-align: left;
+  display: block;
+  letter-spacing: -3px;
 }
 
 .middle-box h1 {
@@ -873,7 +876,7 @@ dd.project-people {
 .article h1 {
   font-size: 48px;
   font-weight: 700;
-  color: #2F4050;
+  color: #004665;
 }
 
 .article p {
