--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -18,7 +18,7 @@
                 </h2>
             </div>
             <div class="mail-box">
-                <%= form_for @message, html: {class: 'form-horizontal'} do |f| %>
+                <%= form_for @post, html: {class: 'form-horizontal'} do |f| %>
                     <div class="mail-body">
                         <div class="form-group"><label class="col-sm-2 control-label">Title:</label>
                             <div class="col-sm-10"><input type="text" class="form-control" value=""></div>
@@ -48,7 +48,7 @@
 <%= content_for :javascript do %>
   <script type="text/javascript">
     $(document).ready(function() {
-        $('#message_when').datetimepicker({});
+        $('#post_when').datetimepicker({});
     })
   </script>
 <% end %>
