Edited birthday messages features

--- a/app/views/birthdays/scheduled.html.erb
+++ b/app/views/birthdays/scheduled.html.erb
@@ -18,9 +18,8 @@
 						</div>
 						<div class="col-lg-10">
 							<p>Fulano 07/07/2017</p>
-							<div class="input-group">
-								<textarea class="form-control h-100"></textarea>
-								<span class="input-group-addon btn btn-primary">Schedule</span>
+							<div class="">
+								<textarea class="form-control h-100">Feliz aniversário Fulano!! Tudo de bom pra você! :)</textarea>
 							</div>
 						</div>
 					</div>
@@ -33,9 +32,9 @@
 						</div>
 						<div class="col-lg-10">
 							<p>Ciclano 08/07/2017</p>
-							<div class="input-group">
-								<textarea class="form-control h-100"></textarea>
-								<span class="input-group-addon btn btn-primary">Schedule</span>
+							<div class="">
+								<textarea class="form-control h-100">Feliz aniversário Ciclano!! Aproveite o seu dia! :]
+								</textarea>
 							</div>
 						</div>
 					</div>
@@ -48,24 +47,9 @@
 						</div>
 						<div class="col-lg-10">
 							<p>Beltrano 09/07/2017</p>
-							<div class="input-group">
-								<textarea class="form-control h-100"></textarea>
-								<span class="input-group-addon btn btn-primary">Schedule</span>
-							</div>
-						</div>
-					</div>
-					<hr />
-					<div class="row">
-						<div class="col-lg-2">
-							<a href="#">
-								<img class="img-responsive" src="http://placehold.it/100x100"alt="">
-							</a>
-						</div>
-						<div class="col-lg-10">
-							<p>Amigo X 10/07/2017</p>
-							<div class="input-group">
-								<textarea class="form-control h-100"></textarea>
-								<span class="input-group-addon btn btn-primary">Schedule</span>
+							<div class="">
+								<textarea class="form-control h-100">Parabéééns Beltrano!!
+								</textarea>
 							</div>
 						</div>
 					</div>
