--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -14,7 +14,7 @@
                     <a href="<%= messages_path %>" class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Discard email"><i class="fa fa-times"></i> Discard</a>
                 </div>
                 <h2>
-                    Write Post
+                    Write Message
                 </h2>
             </div>
             <div class="mail-box">
@@ -34,7 +34,7 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="mail-body text-right tooltip-demo">
-                        <%= f.button "<i class='fa fa-reply'></i> Schedule Post".html_safe, :class => 'btn btn-sm btn-primary', title: "Schedule Post", data: {toggle: "tooltip", placement: "top" } %>
+                        <%= f.button "<i class='fa fa-reply'></i> Schedule Message".html_safe, :class => 'btn btn-sm btn-primary', title: "Schedule Message", data: {toggle: "tooltip", placement: "top" } %>
                         <a href="<%= messages_path %>" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Discard email"><i class="fa fa-times"></i> Discard</a>
                         <a href="<%= messages_path %>" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Move to draft folder"><i class="fa fa-pencil"></i> Draft</a>
                     </div>
