--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -21,7 +21,7 @@
                 <%= form_for @message, html: {class: 'form-horizontal'} do |f| %>
                     <div class="mail-body">
                         <div class="form-group"><label class="col-sm-2 control-label">Title:</label>
-                            <div class="col-sm-10"><input type="text" class="form-control" value=""></div>
+                            <div class="col-sm-10"><%= f.text_field :title, :class => 'form-control' %></div>
                         </div>
                         <div class="form-group"><label class="col-sm-2 control-label">When:</label>
                             <div class="col-sm-10"><%= f.text_field :when, :class => 'form-control', data: {format: "dd/MM/yyyy hh:mm:ss"} %></div>
@@ -34,7 +34,7 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="mail-body text-right tooltip-demo">
-                        <%= f.button "<i class='fa fa-reply'></i> Schedule Post".html_safe, :class => 'btn btn-sm btn-primary', title: "Schedule Post", data: {toggle: "tooltip", placement: "top" } %>
+                        <%= f.button "<i class='fa fa-reply'></i> Schedule Message".html_safe, :class => 'btn btn-sm btn-primary', title: "Schedule Message", data: {toggle: "tooltip", placement: "top" } %>
                         <a href="<%= messages_path %>" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Discard email"><i class="fa fa-times"></i> Discard</a>
                         <a href="<%= messages_path %>" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Move to draft folder"><i class="fa fa-pencil"></i> Draft</a>
                     </div>
