--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -21,7 +21,7 @@
                 <%= form_for @post, html: {class: 'form-horizontal'} do |f| %>
                     <div class="mail-body">
                         <div class="form-group"><label class="col-sm-2 control-label">Title:</label>
-                            <div class="col-sm-10"><input type="text" class="form-control" value=""></div>
+                            <div class="col-sm-10"><%= f.text_field :title, :class => 'form-control' %></div>
                         </div>
                         <div class="form-group"><label class="col-sm-2 control-label">When:</label>
                             <div class="col-sm-10"><%= f.text_field :when, :class => 'form-control', data: {format: "dd/MM/yyyy hh:mm:ss"} %></div>
